tests/invalid/invalid_type_const.fl
main :: proc () {
  A : 123 : 123;
}
